AX: [ATK] MathML tokens with text fail to expose their text content via AtkText https://bugs.webkit.org/show_bug.cgi?id=139454

Reviewed by Chris Fleizach.

Source/WebCore:

Expose the text content of the element for non-anonymous RenderMathMLOperators.
This is needed because for ATK we expose the rendered element itself; not the
descendant text renderers. Also include MathML tokens as objects which should
implement AtkText.

Test: accessibility/math-text.html

* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::textUnderElement):
* accessibility/atk/WebKitAccessibleWrapperAtk.cpp:
(getInterfaceMaskFromObject):

LayoutTests:

* accessibility/math-text.html: Added.
* platform/efl/accessibility/math-text-expected.txt: Added.
* platform/gtk/accessibility/math-text-expected.txt: Added.
* platform/mac/accessibility/math-text-expected.txt: Added.


Canonical link: https://commits.webkit.org/157346@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@177086 268f45cc-cd09-0410-ab3c-d52691b4dbfc